# hddtemp_rust

./: Makefile  README.md
pre_build_bin/: src_rust
src_rust/: .gitignore  Cargo.toml
src_rust/.cargo/: config.toml
src_rust/src/: main.rs
