[package]
name = "src_rust"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"
nix = { version = "0.29.0", features = ["user"] }
format = "0.2.4"
prettytable-rs = "0.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
